src/rules/flake8_2020/snapshots/ruff__flake8_2020__tests__YTT103_YTT103.py.snap
---
source: src/flake8_2020/mod.rs
expression: checks
---
- kind:
    SysVersionCmpStr3: ~
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 7
  fix: ~
  parent: ~
- kind:
    SysVersionCmpStr3: ~
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 11
  fix: ~
  parent: ~
- kind:
    SysVersionCmpStr3: ~
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 11
  fix: ~
  parent: ~
- kind:
    SysVersionCmpStr3: ~
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 11
  fix: ~
  parent: ~
- kind:
    SysVersionCmpStr3: ~
  location:
    row: 8
    column: 0
  end_location:
    row: 8
    column: 11
  fix: ~
  parent: ~

