src/rules/flake8_2020/snapshots/ruff__flake8_2020__tests__YTT204_YTT204.py.snap
---
source: src/flake8_2020/mod.rs
expression: checks
---
- kind:
    SysVersionInfoMinorCmpInt: ~
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 22
  fix: ~
  parent: ~
- kind:
    SysVersionInfoMinorCmpInt: ~
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 18
  fix: ~
  parent: ~

